# new_swt

./: .env.demo  .env.template  .gitignore  CHANGELOG.md  CHANGELOG_CRITICAL_SAFETY_FIXES.md  CLAUDE.md  Dockerfile.data  Dockerfile.micro  Dockerfile.simple  Dockerfile.synthetic  Dockerfile.test  Dockerfile.training  Dockerfile.validation-simple  GITHUB_MIGRATION_GUIDE.md  MICRO_FEATURES_INTEGRATED.md  MIGRATION_CHECKLIST.md  PNL_CALCULATION_FIX_COMPLETE.md  README.md  RECONCILIATION_INTEGRATION_COMPLETE.md  ROGUE_PROCESS_ANALYSIS.md  RUN_MICRO_TRAINING.md  SPEED_DEMON_QUICKSTART.md  analyze_checkpoint.py  analyze_high_pip_bars.py  bootstrap_monte_carlo.py  bootstrap_spaghetti.py  clean_forex_data.py  create_master_duckdb.py  create_snapshot.sh  create_synthetic_data.py  debug_networks.py  debug_root_causes.py  deploy_production.sh  deploy_speed_demon.sh  docker-compose.episode13475-live.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.validation.yml  docker-compose.yml  download_gbpjpy_data.py  (+84 more)
archive/: launch_amddp1_training.sh  train_micro_muzero_amddp1.py
checkpoint_migration/: README.md
checkpoints/: README.md  swt_episode_1.json  swt_episode_10.json  swt_episode_100.json  swt_episode_1000.json  swt_episode_10000.json  swt_episode_10100.json  swt_episode_10200.json  swt_episode_10300.json  swt_episode_10400.json  swt_episode_10500.json  swt_episode_10600.json  swt_episode_10700.json  swt_episode_10800.json  swt_episode_10900.json  swt_episode_110.json  swt_episode_1100.json  swt_episode_11000.json  swt_episode_11100.json  swt_episode_11200.json  swt_episode_11300.json  swt_episode_11400.json  swt_episode_11500.json  swt_episode_11600.json  swt_episode_11700.json  swt_episode_11800.json  swt_episode_11900.json  swt_episode_120.json  swt_episode_1200.json  swt_episode_12000.json  swt_episode_12100.json  swt_episode_12200.json  swt_episode_12300.json  swt_episode_12400.json  swt_episode_12500.json  swt_episode_12600.json  swt_episode_12700.json  swt_episode_12800.json  swt_episode_12900.json  swt_episode_130.json  (+216 more)
config/: experimental.yaml  features.yaml  live.yaml  model.yaml  process_limits.yaml  redis.conf  system.yaml  trading.yaml  training.yaml
data/: README.md  download_gbpjpy_full.py  handmade_feature_builder.py  incremental_feature_builder.py  oanda_m1_incremental_puller.py  prepare_micro_features.py
docker/: Dockerfile.live  Dockerfile.training  docker-compose.yml  entrypoint.sh
docs/: CHECKPOINT_TESTING.md  README.md
experimental_research/: Dockerfile  Makefile  README.md  README_BUILD.md  advanced_muzero_analysis.md  backward_view_reanalyze.py  consistency_loss.py  docker-compose.yml  docker-entrypoint.sh  efficientzero_main.py  gumbel_action_selection.py  off_policy_correction.py  requirements.txt  resource_analysis.md  rezero_mcts.py  unizero_concurrent_prediction.py  value_prefix_network.py
fixes/: critical_fixes.py
micro/: IMPLEMENTATION_FIXES_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  README.md  README_old.md  STOCHASTIC_MUZERO_IMPLEMENTATION.md  __init__.py  afterstate_network.onnx  create_png_visualizations.py  dynamics_network.onnx  policy_network.onnx  representation_network.onnx  value_network.onnx  visualize_architecture.py
monitoring/: nginx-dashboard.conf  prometheus.yml  swt_alerts.yml
scripts/: benchmark_system.py  deploy_production.sh  download_oanda_data.py  migration_tools.py  performance_validator.py  start_live.sh  start_training.sh  start_validation.sh  validate_checkpoint.py
sessions/: episode_13475_live_20250908_093331.json  episode_13475_live_20250908_143436.json  episode_13475_live_20250908_143905.json  episode_13475_live_20250909_123200.json  episode_13475_live_20250909_123205.json  episode_13475_live_20250909_123211.json  episode_13475_live_20250909_123235.json  episode_13475_live_20250909_192625.json  episode_13475_live_20250909_193350.json  episode_13475_live_20250909_200741.json  episode_13475_live_20250909_203331.json  episode_13475_live_20250909_203657.json  episode_13475_live_20250909_204103.json  episode_13475_live_20250909_204403.json  episode_13475_live_20250909_212554.json  episode_13475_live_20250909_212841.json  session_20250914_225013.json  session_20250914_225045.json  session_20250914_225049.json  session_20250914_225122.json  session_20250914_225137.json  session_20250914_225209.json  session_20250914_230650.json  session_20250914_230728.json  session_20250914_230744.json  session_20250914_230819.json  session_20250914_230855.json  (+83 more)
swt_core/: __init__.py  (+10 more)
(+529 files in other folders)
